@@ -18261,16 +18261,6 @@ if ($ACTION == 'CalLBacKLisT')
 		$loop_count++;
 		}
 	$loop_count=0;
-	$callback_id = array();
-	$lead_id = array();
-	$campaign_id = array();
-	$status = array();
-	$entry_time = array();
-	$callback_time = array();
-	$comments = array();
-	$customer_timezone = array();
-	$customer_time = array();
-	$customer_timezone_diff = array();
 	while ($callbacks_count>$loop_count)
 		{
 		$alt_phone='';
