@@ -821,7 +821,8 @@
     * Open Webforms as tabs instead as windows:
       - Update: www/agc/vicidial.php;
     * Fix typos:
-      - Update: www/vicidial/welcome.php.
+      - Update: www/vicidial/welcome.php,
+          www/agc/vdc_db_query.php.
     * Change next release to 3.0.1.
 
 2.26.29
